<resources>
    <string name="app_name">Martinez22101571EP202401</string>
    <string name="tvSplash_tittle">Welcome to American Cup 2024</string>
    <string name="tvSplash_subtittle">Immerse yourself in the excitement of soccer as nations compete for glory in this epic tournament.</string>
    <string name="btGetStarted">GET STARTED</string>
    <string name="tvLogin_tittle">LOGIN</string>
    <string name="etUsuario_name">Email Address</string>
    <string name="etPassword_name">Password</string>
    <string name="btnLogin_name">SIGN IN</string>
    <string name="tvMenu_tittle">MENU</string>
    <string name="btPrizes_name">PRIZES</string>
    <string name="btTeams_name">TEAMS</string>
    <string name="btStadiums_name">STADIUMS</string>
    <string name="tvPrizes_tittle">PRIZES</string>
    <string name="btPremio_name">CALCULATE</string>
    <string name="tvPremioResult_default">Ingrese un monto para calcular</string>
    <string name="btGoMenu_name">GO TO MENU</string>
    <string name="tvTeams_tittle">TEAMS</string>
    <string name="tvStadium_tittle">STADIUM</string>
</resources>